<resources>
    <string name="app_name">StayEasyHalifax</string>
    <string name="home_heading">Your Halifax Adventure Awaits!</string>
    <string name="logo_home_description">logo home</string>
    <string name="check_in_date_text">Check In Date</string>
    <string name="check_out_date_text">Check-Out Date</string>
    <string name="welcome_text">Let\'s get you started!</string>
    <string name="name_text_view">Enter your name</string>
    <string name="name_edit_text_hint">full name</string>
    <string name="guest_count_text_view">Enter the guest count</string>
    <string name="guest_count_edit_text_hint">0</string>
    <string name="date_range_button_text">Select Dates</string>
    <string name="date_range_text_view_hint">selected date range</string>
    <string name="search_button_text">Search</string>
    <string name="clear_button_text">Clear</string>
    <string name="retrieve_button_text">Retrieve Data</string>
    <string name="book_now_button_text">Book Now</string>
    <string name="display_info">Welcome, %1$s! Showing stays for %2$s guests between %3$s and %4$s.</string>
    <string name="available_display_text">Rooms Available</string>
    <string name="unavailable_display_text">Rooms Unavailable</string>
    <string name="booking_confirmed_message">Pack your bags, your Booking is confirmed!\nBookingID: %s</string>
    <string name="guest_deatils_header_text">Guest %d </string>
    <string name="back_to_search_button_text">Back to search</string>
</resources>